<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizPointer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
   	<string name="title">QuizPointer</string>
   	<string name="username">User Name</string>
   	<string name="password">Password</string>
   	<string name="package1">Lorem\n<b>Quiz</b></string>
   	<string name="package2">Ipsum\n<b>Quiz</b></string>
   	<string name="package3">Dolor\n<b>Quiz</b></string>
   	<string name="package4">Sit Amet\n<b>Quiz</b></string>
   	<string name="package5">Sample\n<b>Quiz</b></string>
   	<string name="questiontext">
   	    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
   	    Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque 
   	    penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
   	    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
   	    Nulla consequat massa quis enim. Donec pede justo, fringilla vel, 
   	    aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, 
   	    venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. 
   	    Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. 
   	    Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. 
   	    Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. P
   	    hasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. 
   	    Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. 
   	    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, 
   	    sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, 
   	    hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut 
   	    libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. 
   	    Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, 
   	    leo eget bibendum sodales, augue velit cursus nunc,
   	</string>
   	<string name="explanationtext">
   	    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
   	    Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque 
   	    penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
   	    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
   	    Nulla consequat massa quis enim. Donec pede justo, fringilla vel, 
   	    aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, 
   	    venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. 
   	    Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. 
   	    Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. 
   	    Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. P
   	    hasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. 
   	    Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. 
   	    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, 
   	    sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, 
   	    hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut 
   	    libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. 
   	    Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, 
   	    leo eget bibendum sodales, augue velit cursus nunc,
   	</string>
   	<string name="selectanswertext">
   	    Please select\nthe answer..
	</string>
	<string name="result">
   	    Your Result
	</string>
	<string name="correctresult">
   	    Right\n<b>0</b>
	</string>
	<string name="wrongresult">
   	    Wrong\n<b>0</b>
	</string>
	<string name="grade">
   	    Good Job!
	</string>
	<string name="total_point">
   	    Total Point : 0
	</string>
	 <string name="maxcharactermultiple">40</string>
	 <string name="maxcharactersorted">36</string>
	 <string name="maxcharacterpair">20</string>
	<string name="welcome_text">Welcome, Admin</string>
	<string name="user">Hans</string>
	<string name="summary">Question : the Holographic projection has the correct representation of</string>
	<string name="summary_answer">Answer : B. Area</string>
</resources>
