<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:weightSum="16"
    android:background="#ffffff"
    android:id="@+id/pageLogin">
    
    <TextView 
        android:id="@+id/title"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1.5"
    	android:text="@string/title"
    	android:textColor="#ffffff"
    	android:background="#000000"
    	android:textSize="@dimen/title_size"
    	android:textStyle="bold"
    	android:gravity="center"/>
    
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#1ABC9C"/>
    
    <View
		android:layout_width="match_parent"
		android:layout_height="4dp"
		android:layout_weight="0.01"
		android:layout_gravity="center_vertical"
		android:background="#16A085"/>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center"
        android:layout_weight="6">
        <ImageView
            android:id="@+id/img_logo"
        	android:layout_width="220dp"
        	android:layout_height="220dp"
        	android:scaleType="fitXY"
        	android:background="@drawable/logologinoff"/>
    </TableRow>
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.49"
        android:layout_gravity="center"
        android:weightSum="4">
        <View
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_gravity="center_vertical"
			android:background="@android:color/darker_gray"/>
    	
    		<EditText
        		android:id="@+id/et_username"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_weight="0.5"
        		android:background="#DFE2E5"
        		android:gravity="center"
        		android:hint="@string/username"
        		android:textColor="#000000"
        		android:textColorHint="#BEC5CB"
        		android:textSize="22sp"
        		android:inputType="textEmailAddress"/>
        	
    	
        <View
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_gravity="center_vertical"
			android:background="@android:color/darker_gray"/>    
    
    		<EditText
        		android:id="@+id/et_password"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_weight="0.5"
        		android:background="#DFE2E5"
        		android:minEms="4"
        		android:imeOptions="actionDone"
        		android:maxLines="1"
        		android:gravity="center"
        		android:hint="@string/password"
        		android:textColor="#000000"
        		android:textColorHint="#BEC5CB"
        		android:textSize="22sp"
        		android:inputType="textPassword"/>
    	
    	 <View
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_gravity="center_vertical"
			android:background="@android:color/darker_gray"/>
    	<ImageButton
    	    android:id="@+id/buttonlogin"
    	    android:layout_width="wrap_content"
        	android:layout_height="@dimen/blogin_height"
        	android:layout_marginTop="10dp"
        	android:layout_marginRight="10dp"
        	android:layout_marginLeft="10dp"
        	android:layout_weight="0.3"
        	android:background="@drawable/bloginoff"/>    
    </TableLayout>

</LinearLayout>
